設定のリファクタリング

--- a/app/gradle.properties.dust
+++ b/app/gradle.properties.dust
@@ -1,2 +1,2 @@
-X_USER_AGENT_AUTHORIZATION_TOKEN =
-TODO_API_BASE_URL =
+X_USER_AGENT_AUTHORIZATION_TOKEN = token
+TODO_API_BASE_URL = http://hoge.api.com
