--- a/app/src/main/res/layout/content_task.xml
+++ b/app/src/main/res/layout/content_task.xml
@@ -9,7 +9,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".app.MainActivity"
     tools:showIn="@layout/activity_task">
 
     <LinearLayout
@@ -53,6 +52,7 @@
 
         <ListView
             android:id="@+id/list"
+            android:divider="@null"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
