--- a/app/src/main/res/layout/content_task.xml
+++ b/app/src/main/res/layout/content_task.xml
@@ -20,6 +20,7 @@
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="0dp"
+            android:layout_marginLeft="5dp"
             android:layout_height="wrap_content"
             android:layout_weight="1">
 
