--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,16 @@
 <resources>
+    <!-- マージンサイズを定義-->
+    <dimen name="margin_small">3dp</dimen>
+    <dimen name="margin_mid">5dp</dimen>
+    <dimen name="margin_large">8dp</dimen>
+
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">3dp</dimen>
-    <dimen name="activity_vertical_margin">3dp</dimen>
-    <dimen name="list_horizontal_margin">5dp</dimen>
-    <dimen name="list_vertical_margin">8dp</dimen>
+    <dimen name="activity_horizontal_margin">@dimen/margin_mid</dimen>
+    <dimen name="activity_vertical_margin">@dimen/margin_mid</dimen>
+    <dimen name="list_horizontal_margin">@dimen/margin_mid</dimen>
+    <dimen name="list_vertical_margin">@dimen/margin_large</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="toolbar_vertical_margin">40dp</dimen>
+
+
 </resources>
