--- a/app/src/main/res/layout/list_task.xml
+++ b/app/src/main/res/layout/list_task.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -37,6 +37,15 @@
                 android:layout_marginLeft="@dimen/list_horizontal_margin"
                 android:layout_toRightOf="@id/checkbox_complete" />
 
+
+            <ImageButton
+                android:id="@+id/btn_register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:visibility="invisible"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_mode_edit_white_24dp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
