--- a/app/src/main/res/layout/list_task.xml
+++ b/app/src/main/res/layout/list_task.xml
@@ -39,13 +39,13 @@
 
 
             <ImageButton
-                android:id="@+id/btn_register"
+                android:id="@+id/btn_edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:visibility="invisible"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_mode_edit_white_24dp" />
+                android:src="@drawable/ic_mode_edit_white_24dp"
+                android:visibility="invisible" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
