--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -7,6 +7,8 @@
 
     <ListView
         android:id="@+id/list"
+        android:divider="@null"
+        android:dividerHeight="2dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
