--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -6,9 +6,11 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:background="@drawable/widget_title_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_small"
+        android:padding="@dimen/margin_small"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
