--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="text_color" >@color/gray</color>
     <color name="gray">#888888</color>
+    <color name="gray_dark">#666666</color>
 </resources>
